GERONIMO-5560 Add maxPermSize to avoid OOM exception when starting server via windows service, for trunk
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@1303430 13f79535-47bb-0310-9956-ffa450edef68